[package]
name = "rust_playground"
version = "0.1.2"
authors = ["sinlov <sinlovgmppt@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.204"
serde_derive = "1.0.163"
serde_json = "1.0.119"
actix-web = "4.8.0"
serde_with = "3.8.2"
