[package]
name = "rust_playground"
version = "0.1.2"
authors = ["sinlov <sinlovgmppt@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.218"
serde_derive = "1.0.163"
serde_json = "1.0.139"
actix-web = "4.9.0"
serde_with = "3.12.0"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tarpaulin_include)'] }